force-app/main/default/objects/PerformanceLog__c/PerformanceLog__c.object-meta.xml
<CustomObject>
    <label>PerformanceLog</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>PerformanceLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PerformanceLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>