force-app/main/default/objects/PerformanceLog__c/fields/DurationRollUp__c.field-meta.xml
<CustomField>
    <fullName>DurationRollUp__c</fullName>
    <label>Duration</label>
    <summarizedField>PerformanceLogEntry__c.Duration__c</summarizedField>
    <summaryForeignKey>PerformanceLogEntry__c.PerformanceLog__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>