force-app/main/default/objects/PerformanceLog__c/fields/numLogEntries__c.field-meta.xml
<CustomField>
    <fullName>numLogEntries__c</fullName>
    <label>numLogEntries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>