force-app/main/default/objects/PerformanceLog__c/fields/numSlotsRetrieved__c.field-meta.xml
<CustomField>
    <fullName>numSlotsRetrieved__c</fullName>
    <description>Used in Scheduler - Google Calendar Integration logging</description>
    <label>numSlotsRetrieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>