force-app/main/default/objects/PerformanceLog__c/fields/numUsersChecked__c.field-meta.xml
<CustomField>
    <fullName>numUsersChecked__c</fullName>
    <description>Used in Scheduler - Google Calendar Integration logging</description>
    <label>numUsersChecked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>